# serializer version: 1
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_co_detector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_amax_3000_co_detector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CO: 'carbon_monoxide'>,
    'original_icon': None,
    'original_name': 'CO Detector',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AMAX 3000_point_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_co_detector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'carbon_monoxide',
      'friendly_name': 'Bosch AMAX 3000 CO Detector',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_amax_3000_co_detector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_connection_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_amax_3000_connection_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connection Status',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AMAX 3000_connection_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_connection_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Bosch AMAX 3000 Connection Status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_amax_3000_connection_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_amax_3000_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Door',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AMAX 3000_point_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'Bosch AMAX 3000 Door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_amax_3000_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_glassbreak_detector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_amax_3000_glassbreak_detector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.TAMPER: 'tamper'>,
    'original_icon': None,
    'original_name': 'GlassBreak Detector',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AMAX 3000_point_6',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_glassbreak_detector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'tamper',
      'friendly_name': 'Bosch AMAX 3000 GlassBreak Detector',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_amax_3000_glassbreak_detector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_motion_detector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_amax_3000_motion_detector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOTION: 'motion'>,
    'original_icon': None,
    'original_name': 'Motion Detector',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AMAX 3000_point_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_motion_detector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'Bosch AMAX 3000 Motion Detector',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_amax_3000_motion_detector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_smoke_detector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_amax_3000_smoke_detector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': 'Smoke Detector',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AMAX 3000_point_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_smoke_detector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Bosch AMAX 3000 Smoke Detector',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_amax_3000_smoke_detector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_window-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_amax_3000_window',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': 'Window',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AMAX 3000_point_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[AMAX 3000][binary_sensor.bosch_amax_3000_window-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'window',
      'friendly_name': 'Bosch AMAX 3000 Window',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_amax_3000_window',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_co_detector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_co_detector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CO: 'carbon_monoxide'>,
    'original_icon': None,
    'original_name': 'CO Detector',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'B5512 (US1B)_point_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_co_detector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'carbon_monoxide',
      'friendly_name': 'Bosch B5512 (US1B) CO Detector',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_co_detector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_connection_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_connection_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connection Status',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'B5512 (US1B)_connection_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_connection_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Bosch B5512 (US1B) Connection Status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_connection_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Door',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'B5512 (US1B)_point_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'Bosch B5512 (US1B) Door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_glassbreak_detector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_glassbreak_detector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.TAMPER: 'tamper'>,
    'original_icon': None,
    'original_name': 'GlassBreak Detector',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'B5512 (US1B)_point_6',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_glassbreak_detector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'tamper',
      'friendly_name': 'Bosch B5512 (US1B) GlassBreak Detector',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_glassbreak_detector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_motion_detector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_motion_detector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOTION: 'motion'>,
    'original_icon': None,
    'original_name': 'Motion Detector',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'B5512 (US1B)_point_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_motion_detector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'Bosch B5512 (US1B) Motion Detector',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_motion_detector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_smoke_detector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_smoke_detector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': 'Smoke Detector',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'B5512 (US1B)_point_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_smoke_detector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Bosch B5512 (US1B) Smoke Detector',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_smoke_detector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_window-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_window',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': 'Window',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'B5512 (US1B)_point_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[B5512 (US1B)][binary_sensor.bosch_b5512_us1b_window-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'window',
      'friendly_name': 'Bosch B5512 (US1B) Window',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_b5512_us1b_window',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_co_detector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_solution_3000_co_detector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CO: 'carbon_monoxide'>,
    'original_icon': None,
    'original_name': 'CO Detector',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'Solution 3000_point_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_co_detector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'carbon_monoxide',
      'friendly_name': 'Bosch Solution 3000 CO Detector',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_solution_3000_co_detector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_connection_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_solution_3000_connection_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Connection Status',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'Solution 3000_connection_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_connection_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Bosch Solution 3000 Connection Status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_solution_3000_connection_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_solution_3000_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Door',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'Solution 3000_point_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'Bosch Solution 3000 Door',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_solution_3000_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_glassbreak_detector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_solution_3000_glassbreak_detector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.TAMPER: 'tamper'>,
    'original_icon': None,
    'original_name': 'GlassBreak Detector',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'Solution 3000_point_6',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_glassbreak_detector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'tamper',
      'friendly_name': 'Bosch Solution 3000 GlassBreak Detector',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_solution_3000_glassbreak_detector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_motion_detector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_solution_3000_motion_detector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOTION: 'motion'>,
    'original_icon': None,
    'original_name': 'Motion Detector',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'Solution 3000_point_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_motion_detector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'motion',
      'friendly_name': 'Bosch Solution 3000 Motion Detector',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_solution_3000_motion_detector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_smoke_detector-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_solution_3000_smoke_detector',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SMOKE: 'smoke'>,
    'original_icon': None,
    'original_name': 'Smoke Detector',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'Solution 3000_point_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_smoke_detector-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'smoke',
      'friendly_name': 'Bosch Solution 3000 Smoke Detector',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_solution_3000_smoke_detector',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_window-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bosch_solution_3000_window',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': 'Window',
    'platform': 'bosch_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'Solution 3000_point_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[Solution 3000][binary_sensor.bosch_solution_3000_window-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'window',
      'friendly_name': 'Bosch Solution 3000 Window',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bosch_solution_3000_window',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
